Updated hello.html by adding another heading

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Salutations</h1>
-        Hello, world!
+        <p>>Hello, world!</p
+        <h2>Welcome to me practicing using git and github!</h2>
     </body>
 </html>
