Updated hello.html with styling
Deliberate merge conflict created by making changes both locally and on github, to practice resolving merge conflict.

--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>Salutations</h1>
+        <h1 style="color: blue;">Salutations</h1>
         <p>>Hello, world!</p
         <h2>Welcome to me practicing using git and github!</h2>
     </body>
